make 404 page will return index.html

--- a/404.html
+++ b/404.html
@@ -4,4 +4,6 @@ title:          出错啦！
 ---
 <h1>出错啦。。。</h1>
 
-<p>看看别的吧先</p>
+<p>看看别的吧先,即将返回博客首页。。。</p>
+
+<script> window.setInterval("location='index.html'",3000); </script>
