--- a/404.html
+++ b/404.html
@@ -6,4 +6,4 @@ title:          出错啦！
 
 <p>先看看别的吧,即将返回博客首页。。。</p>
 
-<script> window.setInterval("location='index.html'",3000); </script>
+<script> window.setInterval("location='xylsh.github.io'",3000); </script>
