--- a/404.html
+++ b/404.html
@@ -1,9 +1,1 @@
----
-layout:         page
-title:          出错啦！
----
-<h1>出错啦。。。</h1>
-
-<p>先看看别的吧,即将返回博客首页。。。</p>
-
-<script> window.setInterval("location='xylsh.github.io'",3000); </script>
+Sorry this page does not exist =(
